5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1582_1334.log
== SUBMITION (2019-03-14 11:11:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 17 // 2 )

print("Resto: " 1 )

print("Potenciacao: ", 2³)
-- EXECUTION TIME:
0.147659
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: " 1 )
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:13:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 32 // 4 )

print("Resto: " 17%2 )

print("Potenciacao: ", 2³)
-- EXECUTION TIME:
0.175025
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: " 17%2 )
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:07:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 32 // 4 )

print("Resto: " 1 )

print("Potenciacao: ", 2³)
-- EXECUTION TIME:
0.146113
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: " 1 )
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:03:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 32 / 4 )

print("Resto: ", 32//4 )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.170662
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
